--- a/package.json
+++ b/package.json
@@ -1,23 +1,12 @@
 {
-  "name": "json-server",
+  "name": "json-server-vercel",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Deploy JSON Server to Vercel",
+  "main": "api/server.js",
   "scripts": {
-    "start": "json-server --port 3001 ./fake_db.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node api/server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/huytq2703/json-server.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/huytq2703/json-server/issues"
-  },
-  "homepage": "https://github.com/huytq2703/json-server#readme",
   "dependencies": {
-    "json-server": "^0.17.2"
+    "json-server": "^0.17.0"
   }
 }
